--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -375,13 +375,13 @@
     <ClCompile Include="sdl2\sys_sdl2.c">
       <Filter>Source Files\system</Filter>
     </ClCompile>
-    <ClCompile Include="sdl2\vid_dll.c">
-      <Filter>Source Files\system</Filter>
-    </ClCompile>
     <ClCompile Include="input\in_xinput.c">
       <Filter>Source Files\system</Filter>
     </ClCompile>
     <ClCompile Include="input\in_winjoy.c">
+      <Filter>Source Files\system</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl2\vid_sdl2.c">
       <Filter>Source Files\system</Filter>
     </ClCompile>
   </ItemGroup>
