--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -179,7 +179,7 @@
     <Link>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <SubSystem>Windows</SubSystem>
-      <IgnoreSpecificDefaultLibraries>LIBC;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries>LIBCMT;LIBC;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <OutputFile>$(OutDir)$(TargetFileName)</OutputFile>
       <AdditionalLibraryDirectories>sdl2\lib\win32\;external\Steam\redistributable_bin\;external\LibOVR\Lib\Win32\;win32\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;steam_api.lib;glew32s.lib;opengl32.lib;xinput9_1_0.lib;libovr.lib;winmm.lib;wsock32.lib;zlibstat.lib;libjpeg.lib;ogg_static.lib;vorbisfile_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -439,9 +439,6 @@
     <CustomBuild Include="win32\q2.ico" />
     <CustomBuild Include="win32\q2mp1.ico" />
     <CustomBuild Include="win32\q2mp2.ico" />
-    <CustomBuild Include="win32\startup.bmp" />
-    <CustomBuild Include="win32\startup2.bmp" />
-    <CustomBuild Include="win32\startup2beta.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="win32\q2.rc">
