--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClCompile Include="client\snd_stream.c">
       <Filter>Source Files\sound</Filter>
     </ClCompile>
-    <ClCompile Include="win32\snd_win.c">
-      <Filter>Source Files\sound</Filter>
-    </ClCompile>
     <ClCompile Include="client\cl_cin.c">
       <Filter>Source Files\client</Filter>
     </ClCompile>
@@ -382,6 +379,9 @@
       <Filter>Source Files\system</Filter>
     </ClCompile>
     <ClCompile Include="sdl2\in_sdl2.c">
+      <Filter>Source Files\system</Filter>
+    </ClCompile>
+    <ClCompile Include="sdl2\snd_sdl2.c">
       <Filter>Source Files\system</Filter>
     </ClCompile>
   </ItemGroup>
