Replace old audio subsystem with SDL2 audio subsystem from Yamagi Quake II
-Fixes a bunch of issues with the existing audio subsystem
-Significantly extends ogg playback support
-Made ogg vorbis support mandatory
-Retained the music/track##.ogg file scheme
-Retained existing s_sdldriver behavior (accepts 'default'/'auto')
-Fixed buffer not being cleared during the SDL2 audio callback
-Haven't verified the OpenAL support (but should work?)

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -209,6 +209,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="client\sound\ogg.c" />
+    <ClCompile Include="client\sound\openal.c" />
+    <ClCompile Include="client\sound\qal.c" />
+    <ClCompile Include="client\sound\sound.c" />
+    <ClCompile Include="client\sound\wave.c" />
+    <ClCompile Include="qcommon\glob.c" />
     <ClCompile Include="renderer\r_antialias.c" />
     <ClCompile Include="renderer\r_fbo.c" />
     <ClCompile Include="renderer\r_shaderobjects.c" />
@@ -230,10 +236,6 @@
     <ClCompile Include="vr\vr_ovr.c" />
     <ClCompile Include="vr\vr_steamvr.cpp" />
     <ClCompile Include="vr\vr_svr.c" />
-    <ClCompile Include="client\snd_dma.c" />
-    <ClCompile Include="client\snd_mem.c" />
-    <ClCompile Include="client\snd_mix.c" />
-    <ClCompile Include="client\snd_stream.c" />
     <ClCompile Include="client\cl_cin.c" />
     <ClCompile Include="client\cl_cinematic.c" />
     <ClCompile Include="client\cl_console.c" />
