Fixes and improvements
-HUD now uses pre-generated vertices instead of generating this every
frame
-vr_ipd is now properly initialized on startup
-Rare issues with the crosshair has been fixed
-The aiming laser no longer needs the crosshair to be enabled to work
-vr_ovr_distortion has been updated so that 0 is display resolution, 1
is HMD native resolution, and 2 is 1/2 native, and 3 is 1/4 native
-various defaults have been updated
-r_gamma has been renamed (back) to vid_gamma

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -328,7 +328,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h" />
+    <ClInclude Include="client\renderer\include\qgl.h" />
+    <ClInclude Include="client\renderer\include\r_alias.h" />
+    <ClInclude Include="client\renderer\include\r_cin.h" />
+    <ClInclude Include="client\renderer\include\r_local.h" />
+    <ClInclude Include="client\renderer\include\r_model.h" />
+    <ClInclude Include="client\renderer\include\r_normals.h" />
+    <ClInclude Include="client\renderer\include\r_vr.h" />
+    <ClInclude Include="client\renderer\include\r_vr_ovr.h" />
+    <ClInclude Include="client\renderer\include\r_vr_svr.h" />
     <ClInclude Include="client\ui\include\ui_local.h" />
+    <ClInclude Include="client\vr\include\vr.h" />
+    <ClInclude Include="client\vr\include\vr_libovr.h" />
+    <ClInclude Include="client\vr\include\vr_ovr.h" />
+    <ClInclude Include="client\vr\include\vr_steamvr.h" />
+    <ClInclude Include="client\vr\include\vr_svr.h" />
     <ClInclude Include="renderer\anorms.h" />
     <ClInclude Include="renderer\anormtab.h" />
     <ClInclude Include="qcommon\bspfile.h" />
