Add blur effect
-Screen is blurred whenever the game is paused
-Screen is blurred if player is underwater

--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -387,6 +387,9 @@
     <ClCompile Include="qcommon\shared\q_shared.c">
       <Filter>Source Files\common</Filter>
     </ClCompile>
+    <ClCompile Include="client\renderer\r_blur.c">
+      <Filter>Source Files\client\renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h">
