--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -390,6 +390,12 @@
     <ClCompile Include="client\renderer\r_blur.c">
       <Filter>Source Files\client\renderer</Filter>
     </ClCompile>
+    <ClCompile Include="client\renderer\r_vao.c">
+      <Filter>Source Files\client\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="client\renderer\r_vbo.c">
+      <Filter>Source Files\client\renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h">
