--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -217,8 +217,7 @@
     <ClCompile Include="client\renderer\r_antialias.c" />
     <ClCompile Include="client\renderer\r_backend.c" />
     <ClCompile Include="client\renderer\r_beam.c" />
-    <ClCompile Include="client\renderer\r_bloom.c" />
-    <ClCompile Include="client\renderer\r_blur.c" />
+    <ClCompile Include="client\renderer\r_postprocess.c" />
     <ClCompile Include="client\renderer\r_draw.c" />
     <ClCompile Include="client\renderer\r_entity.c" />
     <ClCompile Include="client\renderer\r_fbo.c" />
